add 新增jvm gc、数据事务、java序列化、算法笔记